add a DependencyReducedPom back to get a fine pom to install/deploy